[package]
name = "gst"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs/", package = "gstreamer"}
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

